--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,8 +1,8 @@
 {{ define "tasks.html" }}
 <div class="space-y-3">
-    {{ range $index, $task := .Tasks }} {{ if not $task.Completed }}
+    {{ $sessionID := .SessionID }} {{ range $index, $task := .Tasks }} {{ if not $task.Completed }}
     <form
-        hx-post="/add-xp/{{ .SessionID }}"
+        hx-post="/add-xp/{{ $sessionID }}"
         hx-target="#app"
         hx-swap="outerHTML"
         class="flex items-center justify-between pl-3 bg-gray-100 dark:bg-gray-700 rounded"
